# agentic-workflow-automation-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GLOSSARY.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTIC_DEVELOPMENT_PIPELINE.md  CI_CD.md  CODE_STANDARDS.md  DEVELOPER_GUIDE.md  TESTING.md
docs/adr/: 001-plugin-first-architecture.md  002-plugin-discovery-mechanism.md  003-plugin-lifecycle-model.md  004-plugin-isolation-model.md  005-plugin-contract-definitions.md  006-execution-context-strategy.md  007-workflow-graph-specification.md  008-agentic-development-model.md  template.md
docs/architecture/: architecture-overview.md  domain-model.md  vision.md
docs/tasks/: IMPLEMENTATION_REPORT_TEMPLATE.md  REVIEW_REPORT_TEMPLATE.md  TASK_TEMPLATE.md
migrations/: env.py
migrations/versions/: 6fa114bbb3d5_create_plugins_and_workflow_executions_.py  a1b2c3d4e5f6_create_workflows_table.py
scripts/: orchestrator.py
src/: database.py
src/agents/: README.md  __init__.py
src/api/: README.md  main.py  schemas.py
src/core/: README.md  __init__.py  bootstrap.py  context.py  contracts.py  executor.py  isolation.py  manifest.py  policies.py  registration.py  registry.py  workflow.py
src/governance/: README.md  __init__.py  engine.py  gates.py  pipeline_errors.py  pipeline_guards.py
src/models/: README.md  __init__.py  execution.py  plugin.py  workflow.py
src/plugins/: README.md
src/repositories/: README.md  base.py  executions.py  plugins.py  workflows.py
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_action_plugin_execution.py  test_condition_plugin_execution.py  test_executions_api.py  test_plugins_api.py  test_transformer_plugin_execution.py  test_trigger_plugin_execution.py  test_workflows_api.py
tests/unit/: test_context.py  test_contracts.py  test_executor.py  test_governance.py  test_isolation.py  test_manual_trigger.py  (+4 more)
(+96 files in other folders)
