[project]
name = "agentic-workflow-automation-platform"
version = "0.1.0"
description = "Plugin-based workflow automation platform with DAG-based pipelines"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.2",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"
exclude = ["migrations/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
